--- a/Project3DataAnalysis.ipynb
+++ b/Project3DataAnalysis.ipynb
@@ -70,7 +70,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -121,10 +121,10 @@
     "            time = route_lines[0].split()[1]\n",
     "            route_df = pd.DataFrame(columns=columns)\n",
     "            lines = route_lines[2:]\n",
-    "            city_route = [line.split()[1:] for line in lines]\n",
+    "            city_route = [line.split() for line in lines]\n",
     "            for i, line in enumerate(city_route):\n",
     "                if len(line) > 1:\n",
-    "                    line = line + [time, i, source, route_number, email, IP_ISP, zip_code, time_zone, area]\n",
+    "                    line = line + [time, source, route_number, email, IP_ISP, zip_code, time_zone, area]\n",
     "    #                     print (len(line))\n",
     "                    route_df.loc[i] = line\n",
     "            routes_df = routes_df.append(route_df)\n",
@@ -1741,7 +1741,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 97,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1750,7 +1750,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 236,
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "routes_df = pd.read_csv('routes_df.csv')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1759,16 +1768,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 237,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'942 unique IPs out of 4138'"
+       "'925 unique IPs out of 3875'"
       ]
      },
-     "execution_count": 237,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1842,7 +1851,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 240,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1928,7 +1937,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 258,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1938,7 +1947,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 259,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -1971,7 +1980,7 @@
        " 'org': 'LEVEL3'}"
       ]
      },
-     "execution_count": 259,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1984,7 +1993,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 272,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1993,7 +2002,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 274,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2023,287 +2032,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 323,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>as</th>\n",
-       "      <th>city</th>\n",
-       "      <th>country</th>\n",
-       "      <th>countryCode</th>\n",
-       "      <th>isp</th>\n",
-       "      <th>lat</th>\n",
-       "      <th>lon</th>\n",
-       "      <th>org</th>\n",
-       "      <th>query</th>\n",
-       "      <th>region</th>\n",
-       "      <th>regionName</th>\n",
-       "      <th>status</th>\n",
-       "      <th>timezone</th>\n",
-       "      <th>zip</th>\n",
-       "      <th>message</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>AS6453 TATA COMMUNICATIONS (AMERICA) INC</td>\n",
-       "      <td>New York</td>\n",
-       "      <td>United States</td>\n",
-       "      <td>US</td>\n",
-       "      <td>TATA COMMUNICATIONS (AMERICA) INC</td>\n",
-       "      <td>40.7414</td>\n",
-       "      <td>-74.00320</td>\n",
-       "      <td>Tata Communications Ltd</td>\n",
-       "      <td>63.243.216.22</td>\n",
-       "      <td>NY</td>\n",
-       "      <td>New York</td>\n",
-       "      <td>success</td>\n",
-       "      <td>America/New_York</td>\n",
-       "      <td>10011</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>AS2914 NTT America, Inc.</td>\n",
-       "      <td>Chicago</td>\n",
-       "      <td>United States</td>\n",
-       "      <td>US</td>\n",
-       "      <td>NTT America, Inc.</td>\n",
-       "      <td>41.8781</td>\n",
-       "      <td>-87.62980</td>\n",
-       "      <td>NTT America, Inc.</td>\n",
-       "      <td>199.245.16.65</td>\n",
-       "      <td>IL</td>\n",
-       "      <td>Illinois</td>\n",
-       "      <td>success</td>\n",
-       "      <td>America/Chicago</td>\n",
-       "      <td>60666</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>AS6939 Hurricane Electric LLC</td>\n",
-       "      <td>San Jose</td>\n",
-       "      <td>United States</td>\n",
-       "      <td>US</td>\n",
-       "      <td>Hurricane Electric LLC</td>\n",
-       "      <td>37.2414</td>\n",
-       "      <td>-121.78300</td>\n",
-       "      <td>Hurricane Electric</td>\n",
-       "      <td>2001:470:0:410::2</td>\n",
-       "      <td>CA</td>\n",
-       "      <td>California</td>\n",
-       "      <td>success</td>\n",
-       "      <td>America/Los_Angeles</td>\n",
-       "      <td>95119</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>AS2914 NTT America, Inc.</td>\n",
-       "      <td>Frankfurt am Main</td>\n",
-       "      <td>Germany</td>\n",
-       "      <td>DE</td>\n",
-       "      <td>NTT America, Inc.</td>\n",
-       "      <td>50.1109</td>\n",
-       "      <td>8.68213</td>\n",
-       "      <td>NTT America, Inc.</td>\n",
-       "      <td>2001:418:0:2000::222</td>\n",
-       "      <td>HE</td>\n",
-       "      <td>Hesse</td>\n",
-       "      <td>success</td>\n",
-       "      <td>Europe/Berlin</td>\n",
-       "      <td>60313</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>AS7922 Comcast Cable Communications, LLC</td>\n",
-       "      <td>Chicago</td>\n",
-       "      <td>United States</td>\n",
-       "      <td>US</td>\n",
-       "      <td>Comcast Cable Communications, LLC</td>\n",
-       "      <td>41.8528</td>\n",
-       "      <td>-87.62280</td>\n",
-       "      <td>Comcast Cable Communications, Inc.</td>\n",
-       "      <td>68.86.94.250</td>\n",
-       "      <td>IL</td>\n",
-       "      <td>Illinois</td>\n",
-       "      <td>success</td>\n",
-       "      <td>America/Chicago</td>\n",
-       "      <td>60616</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>5</th>\n",
-       "      <td>AS6939 Hurricane Electric LLC</td>\n",
-       "      <td>San Jose</td>\n",
-       "      <td>United States</td>\n",
-       "      <td>US</td>\n",
-       "      <td>Hurricane Electric LLC</td>\n",
-       "      <td>37.2414</td>\n",
-       "      <td>-121.78300</td>\n",
-       "      <td>Hurricane Electric</td>\n",
-       "      <td>2001:470:0:1e4::2</td>\n",
-       "      <td>CA</td>\n",
-       "      <td>California</td>\n",
-       "      <td>success</td>\n",
-       "      <td>America/Los_Angeles</td>\n",
-       "      <td>95119</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>6</th>\n",
-       "      <td>AS1299</td>\n",
-       "      <td>Toronto</td>\n",
-       "      <td>Canada</td>\n",
-       "      <td>CA</td>\n",
-       "      <td>Telia Company AB</td>\n",
-       "      <td>43.6532</td>\n",
-       "      <td>-79.38320</td>\n",
-       "      <td>Telia Company AB</td>\n",
-       "      <td>62.115.116.180</td>\n",
-       "      <td>ON</td>\n",
-       "      <td>Ontario</td>\n",
-       "      <td>success</td>\n",
-       "      <td>America/Toronto</td>\n",
-       "      <td>M5H</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>7</th>\n",
-       "      <td>AS1299</td>\n",
-       "      <td>Frankfurt am Main</td>\n",
-       "      <td>Germany</td>\n",
-       "      <td>DE</td>\n",
-       "      <td>Telia Company AB</td>\n",
-       "      <td>50.1109</td>\n",
-       "      <td>8.68213</td>\n",
-       "      <td>Telia Company AB</td>\n",
-       "      <td>62.115.114.90</td>\n",
-       "      <td>HE</td>\n",
-       "      <td>Hesse</td>\n",
-       "      <td>success</td>\n",
-       "      <td>Europe/Berlin</td>\n",
-       "      <td>60313</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>8</th>\n",
-       "      <td>AS63949 Linode, LLC</td>\n",
-       "      <td>Dallas</td>\n",
-       "      <td>United States</td>\n",
-       "      <td>US</td>\n",
-       "      <td>Linode, LLC</td>\n",
-       "      <td>32.7787</td>\n",
-       "      <td>-96.82170</td>\n",
-       "      <td>Linode</td>\n",
-       "      <td>45.79.12.2</td>\n",
-       "      <td>TX</td>\n",
-       "      <td>Texas</td>\n",
-       "      <td>success</td>\n",
-       "      <td>America/Chicago</td>\n",
-       "      <td>75270</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>9</th>\n",
-       "      <td>AS7922 Comcast Cable Communications, LLC</td>\n",
-       "      <td>Ashburn</td>\n",
-       "      <td>United States</td>\n",
-       "      <td>US</td>\n",
-       "      <td>Comcast Cable Communications, LLC</td>\n",
-       "      <td>39.0438</td>\n",
-       "      <td>-77.48740</td>\n",
-       "      <td>Comcast IP Services, L.L.C.</td>\n",
-       "      <td>96.110.38.129</td>\n",
-       "      <td>VA</td>\n",
-       "      <td>Virginia</td>\n",
-       "      <td>success</td>\n",
-       "      <td>America/New_York</td>\n",
-       "      <td>20149</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "                                         as               city        country  \\\n",
-       "0  AS6453 TATA COMMUNICATIONS (AMERICA) INC           New York  United States   \n",
-       "1                  AS2914 NTT America, Inc.            Chicago  United States   \n",
-       "2             AS6939 Hurricane Electric LLC           San Jose  United States   \n",
-       "3                  AS2914 NTT America, Inc.  Frankfurt am Main        Germany   \n",
-       "4  AS7922 Comcast Cable Communications, LLC            Chicago  United States   \n",
-       "5             AS6939 Hurricane Electric LLC           San Jose  United States   \n",
-       "6                                    AS1299            Toronto         Canada   \n",
-       "7                                    AS1299  Frankfurt am Main        Germany   \n",
-       "8                       AS63949 Linode, LLC             Dallas  United States   \n",
-       "9  AS7922 Comcast Cable Communications, LLC            Ashburn  United States   \n",
-       "\n",
-       "  countryCode                                isp      lat        lon  \\\n",
-       "0          US  TATA COMMUNICATIONS (AMERICA) INC  40.7414  -74.00320   \n",
-       "1          US                  NTT America, Inc.  41.8781  -87.62980   \n",
-       "2          US             Hurricane Electric LLC  37.2414 -121.78300   \n",
-       "3          DE                  NTT America, Inc.  50.1109    8.68213   \n",
-       "4          US  Comcast Cable Communications, LLC  41.8528  -87.62280   \n",
-       "5          US             Hurricane Electric LLC  37.2414 -121.78300   \n",
-       "6          CA                   Telia Company AB  43.6532  -79.38320   \n",
-       "7          DE                   Telia Company AB  50.1109    8.68213   \n",
-       "8          US                        Linode, LLC  32.7787  -96.82170   \n",
-       "9          US  Comcast Cable Communications, LLC  39.0438  -77.48740   \n",
-       "\n",
-       "                                  org                 query region  \\\n",
-       "0             Tata Communications Ltd         63.243.216.22     NY   \n",
-       "1                   NTT America, Inc.         199.245.16.65     IL   \n",
-       "2                  Hurricane Electric     2001:470:0:410::2     CA   \n",
-       "3                   NTT America, Inc.  2001:418:0:2000::222     HE   \n",
-       "4  Comcast Cable Communications, Inc.          68.86.94.250     IL   \n",
-       "5                  Hurricane Electric     2001:470:0:1e4::2     CA   \n",
-       "6                    Telia Company AB        62.115.116.180     ON   \n",
-       "7                    Telia Company AB         62.115.114.90     HE   \n",
-       "8                              Linode            45.79.12.2     TX   \n",
-       "9         Comcast IP Services, L.L.C.         96.110.38.129     VA   \n",
-       "\n",
-       "   regionName   status             timezone    zip message  \n",
-       "0    New York  success     America/New_York  10011     NaN  \n",
-       "1    Illinois  success      America/Chicago  60666     NaN  \n",
-       "2  California  success  America/Los_Angeles  95119     NaN  \n",
-       "3       Hesse  success        Europe/Berlin  60313     NaN  \n",
-       "4    Illinois  success      America/Chicago  60616     NaN  \n",
-       "5  California  success  America/Los_Angeles  95119     NaN  \n",
-       "6     Ontario  success      America/Toronto    M5H     NaN  \n",
-       "7       Hesse  success        Europe/Berlin  60313     NaN  \n",
-       "8       Texas  success      America/Chicago  75270     NaN  \n",
-       "9    Virginia  success     America/New_York  20149     NaN  "
-      ]
-     },
-     "execution_count": 323,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "IP_df[:10]"
    ]
